<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?actionBarSize"
    android:background="@color/gray_background"
    android:paddingTop="?actionBarSize"
    tools:context=".view.GameFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/game_header_background"
            android:paddingHorizontal="20dp"
            android:paddingVertical="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/gameMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="7dp"
                android:background="@drawable/burger"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintPlayers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/players_and_grid_background"
            android:padding="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintHeader">

            <TextView
                android:id="@+id/playersText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/players_text"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/playersText"
                app:srcCompat="@drawable/arrow_up" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/firstPlayerCharacterImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/playersText"
                app:srcCompat="@drawable/zero" />

            <TextView
                android:id="@+id/firstPlayerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/some_name"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/firstPlayerCharacterImage"
                app:layout_constraintTop_toTopOf="@+id/firstPlayerCharacterImage" />

            <TextView
                android:id="@+id/firstPlayerRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/wins"
                android:textColor="@color/wins_text_gray"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/firstPlayerCharacterImage"
                app:layout_constraintStart_toStartOf="@+id/firstPlayerName"
                app:layout_constraintTop_toBottomOf="@+id/firstPlayerName" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/secondPlayerCharacterImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstPlayerRating"
                app:srcCompat="@drawable/cross" />

            <TextView
                android:id="@+id/secondPlayerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_player_name"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/firstPlayerCharacterImage"
                app:layout_constraintStart_toStartOf="@+id/firstPlayerRating"
                app:layout_constraintTop_toTopOf="@+id/secondPlayerCharacterImage" />

            <TextView
                android:id="@+id/secondPlayerRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/wins"
                android:textColor="@color/wins_text_gray"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/secondPlayerName"
                app:layout_constraintTop_toBottomOf="@+id/secondPlayerName" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <Chronometer
            android:id="@+id/gameTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@drawable/timer_background"
            android:fontFamily="@font/roboto_bold"
            android:padding="12dp"
            android:text="@string/timer_zero"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraintPlayers" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearMove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/game_move_background"
            android:orientation="vertical"
            android:paddingVertical="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gameTimer">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/moves"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/moveCharacterImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    app:srcCompat="@drawable/cross" />

                <TextView
                    android:id="@+id/movePlayerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/some_name"
                    android:textColor="@color/white"
                    android:textSize="14sp" />


            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearMove">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"

                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/gameGridItemImage1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/players_and_grid_background"
                    android:src="@drawable/players_and_grid_background"
                    android:padding="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/gameGridItemImage2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="4dp"

                    android:background="@drawable/players_and_grid_background"
                    android:src="@drawable/players_and_grid_background"
                    android:padding="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/gameGridItemImage3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="4dp"
                    android:background="@drawable/players_and_grid_background"
                    android:src="@drawable/players_and_grid_background"
                    android:padding="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/gameGridItemImage4"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/players_and_grid_background"
                    android:src="@drawable/players_and_grid_background"
                    android:padding="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/gameGridItemImage5"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/players_and_grid_background"
                    android:src="@drawable/players_and_grid_background"
                    android:padding="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/gameGridItemImage6"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/players_and_grid_background"
                    android:src="@drawable/players_and_grid_background"
                    android:padding="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/gameGridItemImage7"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/players_and_grid_background"
                    android:src="@drawable/players_and_grid_background"
                    android:padding="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/gameGridItemImage8"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/players_and_grid_background"
                    android:src="@drawable/players_and_grid_background"
                    android:padding="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/gameGridItemImage9"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/players_and_grid_background"
                    android:src="@drawable/players_and_grid_background"
                    android:padding="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/linearGrid"
            android:paddingHorizontal="12dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/messageInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_weight="0.9"
                android:background="@drawable/input_shape"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/message"
                android:paddingHorizontal="20dp"
                android:paddingVertical="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/sendMessage"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/send_message_button_background"
                android:src="@drawable/airplane" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>